# Anverali_Group_task2

./: README.md  manage.py  project_structure.txt  pyproject.toml
Anverali_Group_task2/: asgi.py  settings.py  urls.py  wsgi.py
contractor/: admin.py  forms.py  models.py  urls.py  views.py
contractor/migrations/: 0001_initial.py
customer/: admin.py  forms.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/contractor/: profile.html  register.html
templates/customer/: profile.html  register.html
templates/errors/: no_profile.html
